--- a/lineage/res/res/values-ru/strings.xml
+++ b/lineage/res/res/values-ru/strings.xml
@@ -2,13 +2,10 @@
 <!--
      Copyright (C) 2015 The CyanogenMod Project
                (C) 2017 The LineageOS Project
-
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-
           http://www.apache.org/licenses/LICENSE-2.0
-
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -16,27 +13,45 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <!-- Label for the crDroid system components when they are shown to the user. -->
     <string name="lineageos_system_label">Система crDroid</string>
+    
+
+    <!-- Labels for the MODIFY_PROFILES permission. -->    
     <string name="permlab_modifyProfiles">Изменение профилей системы</string>
     <string name="permdesc_modifyProfiles">Приложение сможет изменять настройки системных профилей.</string>
+    
+<!-- Labels for the HARDWARE_ABSTRACTION_ACCESS permission. -->
     <string name="permlab_useHardwareFramework">Взаимодействие с оборудованием</string>
     <string name="permdesc_useHardwareFramework">Позволяет приложению использовать аппаратный фреймворк Lineage.</string>
+    
+    <!-- Labels for the WRITE_SETTINGS permission -->
     <string name="permlab_writeSettings">изменить настройки системы Lineage</string>
     <string name="permdesc_writeSettings">Приложение сможет изменять настройки системы Lineage.</string>
+    
+    <!-- Labels for the WRITE_SECURE_SETTINGS permission -->
     <string name="permlab_writeSecureSettings">изменение настроек системы безопасности Lineage</string>
     <string name="permdesc_writeSecureSettings">Позволяет приложению изменять параметры безопасности системы Lineage. Не используется в обычных приложениях.</string>
+    
+    <!-- Profiles -->
+    <!-- Names of default profiles. -->
     <string name="profileNameDefault">По умолчанию</string>
     <string name="profileNameWork">Работа</string>
     <string name="profileNameHome">Дом</string>
     <string name="profileNameSilent">Без звука</string>
     <string name="profileNameNight">Ночь</string>
     <string name="profileNameAutomobile">За рулем</string>
+    <!-- Names of application groups. -->
     <string name="profileGroupPhone">Телефон</string>
     <string name="profileGroupCalendar">Календарь</string>
     <string name="profileGroupGmail">Gmail</string>
     <string name="profileGroupEmail">Почта</string>
     <string name="profileGroupSMS">Сообщения</string>
+    <!-- Name of wildcard profile. -->
     <string name="wildcardProfile">Другие</string>
+    
+    <!-->LiveDisplay strings -->    
+    <string name="live_display_title" translatable="false">LiveДисплей</string>
     <string name="perf_profile_pwrsv">Экономия энергии</string>
     <string name="perf_profile_bal">Сбалансированный</string>
     <string name="perf_profile_perf">Высокая производительность</string>
@@ -57,36 +72,59 @@
     <string name="live_display_night_summary">Только ночные настройки</string>
     <string name="live_display_outdoor">На улице (яркое солнце)</string>
     <string name="live_display_outdoor_summary">Только уличный режим</string>
-    <string name="live_display_hint">Функция LiveDisplay поможет снизить зрительное напряжение и улучшить сон. Нажмите здесь, чтобы попробовать!</string>
-    <string name="accessibility_quick_settings_live_display_off">LiveDisplay выключен.</string>
-    <string name="accessibility_quick_settings_live_display_auto">LiveDisplay работает в автоматическом режиме.</string>
-    <string name="accessibility_quick_settings_live_display_day">LiveDisplay работает в дневном режиме.</string>
-    <string name="accessibility_quick_settings_live_display_night">LiveDisplay работает в ночном режиме.</string>
-    <string name="accessibility_quick_settings_live_display_outdoor">LiveDisplay работает в режиме «на улице».</string>
-    <string name="accessibility_quick_settings_live_display_changed_off">LiveDisplay выключен.</string>
-    <string name="accessibility_quick_settings_live_display_changed_auto">LiveDisplay переключен в автоматический режим.</string>
-    <string name="accessibility_quick_settings_live_display_changed_day">LiveDisplay переключен в дневной режим.</string>
-    <string name="accessibility_quick_settings_live_display_changed_night">LiveDisplay переключен в ночной режим.</string>
-    <string name="accessibility_quick_settings_live_display_changed_outdoor">LiveDisplay переключен в режим «на улице».</string>
+    <string name="live_display_hint">Функция LiveДисплей поможет снизить зрительное напряжение и улучшить сон. Нажмите здесь, чтобы попробовать!</string>
+    <string name="accessibility_quick_settings_live_display_off">LiveДисплей выключен.</string>
+    <string name="accessibility_quick_settings_live_display_auto">LiveДисплей работает в автоматическом режиме.</string>
+    <string name="accessibility_quick_settings_live_display_day">LiveДисплей работает в дневном режиме.</string>
+    <string name="accessibility_quick_settings_live_display_night">LiveДисплей работает в ночном режиме.</string>
+    <string name="accessibility_quick_settings_live_display_outdoor">LiveДисплей работает в режиме «на улице».</string>
+    <string name="accessibility_quick_settings_live_display_changed_off">LiveДисплей выключен.</string>
+    <string name="accessibility_quick_settings_live_display_changed_auto">LiveДисплей переключен в автоматический режим.</string>
+    <string name="accessibility_quick_settings_live_display_changed_day">LiveДисплей переключен в дневной режим.</string>
+    <string name="accessibility_quick_settings_live_display_changed_night">LiveДисплей переключен в ночной режим.</string>
+    <string name="accessibility_quick_settings_live_display_changed_outdoor">LiveДисплей переключен в режим «на улице».</string>
     <string name="permlab_perfAccess">доступ к менеджеру производительности</string>
     <string name="permdesc_perfAccessDesc">Приложение сможет получать доступ к службе производительности. Это разрешение не используется обычными приложениями.</string>
-    <string name="permlab_manageLiveDisplay">управление настройками LiveDisplay</string>
+    
+    <!-- LiveDisplay manager permission -->
+    <string name="permlab_manageLiveDisplay">управление настройками>LiveДисплей</string>
     <string name="permdesc_manageLiveDisplay">Приложение сможет изменять расширенные настройки экрана.</string>
     <string name="permlab_observe_audio_sessions">просмотр изменений аудиосеансов</string>
     <string name="permdesc_observe_audio_sessions">Приложение сможет просматривать аудиопотоки, которые создаются или уничтожаются.</string>
+    
+    <!-- Permissions used by remote preferences -->
     <string name="permlab_manageRemotePrefs">управление удаленными параметрами</string>
     <string name="permdesc_manageRemotePrefs">Приложение сможет управлять удаленными параметрами</string>
+    
+    <!-- About device screen, build date -->
     <string name="build_date">Дата сборки</string>
+    <!-- About device screen, crDroid API Level -->
     <string name="lineage_api_level">Версия API crDroid</string>
+    <!-- About device screen, crDroid updates -->
     <string name="lineage_updates">Обновления crDroid</string>
+    
+    <!-- About device screen, crDroid version -->
     <string name="lineage_version">Версия crDroid</string>
+    
+    <!-- About device screen, vendor security patch -->
     <string name="lineage_vendor_security_patch">Состояние исправлений безопасности от производителя</string>
+
+    <!-- General purpose use "unknown" string -->
     <string name="unknown">Неизвестно</string>
+    
+    <!-- Long-press back kill application -->    
     <string name="app_killed_message">Приложение завершено</string>
+    
+    <!-- Status bar network traffic monitor strings -->
     <string name="kilobitspersecond_short">кбит/с</string>
     <string name="megabitspersecond_short">Мбит/с</string>
     <string name="kilobytespersecond_short">кБ/с</string>
     <string name="megabytespersecond_short">МБ/с</string>
+    
+    <!-- Trust interface -->
+    <!-- This string will be referenced from other apps when they're referring to the Trust interface.
+         Trust is a feature name, it's not suggested to translate this unless there are conflicts due
+         to a different meaning of the word "trust" in your language -->
     <string name="trust_feature_name">Trust</string>
     <string name="permlab_trustInterface">доступ к интерфейсу Trust</string>
     <string name="permdesc_trustInterface">Позволяет приложению отображать предупреждения и предложения Trust</string>
