--- a/lineage/res/res/values-it/strings.xml
+++ b/lineage/res/res/values-it/strings.xml
@@ -24,7 +24,7 @@
     <string name="permlab_writeSettings">modifica le impostazioni di sistema di Lineage</string>
     <string name="permdesc_writeSettings">Consente all\'applicazione di modificare le impostazioni di sistema di Lineage.</string>
     <string name="permlab_writeSecureSettings">modifica le impostazioni sicure di sistema di Lineage</string>
-    <string name="permdesc_writeSecureSettings">Consente all\'applicazione di modificare le impostazioni sicure di sistema di crDroid. Non utilizzato dalle app normali.</string>
+    <string name="permdesc_writeSecureSettings">Consente all\'applicazione di modificare le impostazioni sicure di sistema di LineageOS. Non utilizzato dalle app normali.</string>
     <string name="permlab_protectedApp">aggiungi o rimuovi app dalle app protette</string>
     <string name="permdesc_protectedApp">Consenti ad un\'app di segnalare altre app come protette e bloccarle.</string>
     <string name="profileNameDefault">Predefinito</string>
