--- a/packages/LineageSettingsProvider/res/values-be/strings.xml
+++ b/packages/LineageSettingsProvider/res/values-be/strings.xml
@@ -15,5 +15,5 @@
      limitations under the License.
 -->
 <resources>
-    <string name="app_name">Сховішча налад Lineage</string>
+    <string name="app_name">Сховішча налад LineageOS</string>
 </resources>
